--- a/public/backEnd/oneClassify.html
+++ b/public/backEnd/oneClassify.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <a href="javascript:;" class="btn btn-primary ">确定</a>
+                        <button type="submit" class="btn btn-primary" form="first-form">确定</button>
                     </div>
                 </div>
             </div>
